syntax = "proto3";
package edu.agh.atyranski.Executors.grpc;
option java_multiple_files = true;

message ExecutionRequest {
  string method = 1;
  string jarLocation = 2;
  string data = 3;
}
message ExecutionResponse {
  string data = 1;
}
service ExecutionService {
  rpc execute(ExecutionRequest) returns (ExecutionResponse);
}